[tool.poetry]
name = "nckrig"
version = "0.1.0"
description = "Software to reconstruct missing data in climate datasets using Kriging"
authors = ["Étienne Plésiat"]
license = "BSD 3-Clause"
readme = "README.md"

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Atmospheric Science',
    'License :: OSI Approved :: BSD License',
    "Operating System :: OS Independent",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    "Programming Language :: Python :: 3.10",
    'Programming Language :: Python :: 3 :: Only',
]

[tool.poetry.dependencies]
python = ">= 3.11.0"
pykrige = ">= 1.7.0"
tqdm = ">= 4.64.1"
numpy = ">= 1.23.5"
xarray = ">= 2022.11.0"
netcdf4 = ">= 1.6.2"
matplotlib = ">= 3.7.1"
setuptools = "==65.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nckrig = "nckrig.main:nckrig"
